--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -31,8 +31,14 @@
                     Command="{Binding LoginViewModel.ShowLoginControlsCommand}"
                     Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"/>
             <Button x:Uid="ButtonNewMail"
-                    Command="{Binding SendMessageViewModel.ShowSendingControlosCommand}"
-                    Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"/>
+                    Command="{Binding SendMessageViewModel.ShowSendingControlsCommand}"
+                    Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}">
+                <ineractivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Click">
+                        <core:InvokeCommandAction Command="{Binding ControlMessageViewModel.HideMessageViewCommand}"/>
+                    </core:EventTriggerBehavior>
+                </ineractivity:Interaction.Behaviors>
+            </Button>
             <TextBlock x:Uid="TextBlockFolders"
                        Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"/>
             <Button x:Uid="ButtonInbox"
@@ -159,6 +165,11 @@
                       Grid.Row="1"
                       Background="BlueViolet"
                       SelectedValue="{Binding ControlMessageViewModel.SelectedMailMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                <ineractivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="SelectionChanged">
+                        <core:InvokeCommandAction Command="{Binding SendMessageViewModel.HideSendingControlsCommand}"/>
+                    </core:EventTriggerBehavior>
+                </ineractivity:Interaction.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <uc:MailMessageControl MailMessage="{Binding}"/>
@@ -181,19 +192,19 @@
                 <Button x:Uid="ButtonFlag"
                         Grid.Column="0"
                         Command="{Binding ControlMessageViewModel.FlagMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageBodyControlsVisibility}"/>
+                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
                 <Button x:Uid="ButtonDelete"
                         Grid.Column="1"
                         Command="{Binding ControlMessageViewModel.DeleteMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageBodyControlsVisibility}"/>
+                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
                 <Button Content="X"
                         Grid.Column="2"
                         Background="red"
                         Command="{Binding ControlMessageViewModel.CloseMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageBodyControlsVisibility}"/>
+                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
             </Grid>
             <uc:MessageBodyControl MessageBody="{Binding ControlMessageViewModel.SelectedMailMessage.Body}"
-                                   Visibility="{Binding ControlMessageViewModel.MessageBodyControlsVisibility}"
+                                   Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"
                                    Grid.Row="1"
                                    Margin="10"/>
             <Grid Grid.Row="1"
