--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -16,7 +16,8 @@
     </Page.Resources>
     <ineractivity:Interaction.Behaviors>
         <core:EventTriggerBehavior EventName="Loaded">
-            <core:InvokeCommandAction Command="{Binding Source={StaticResource viewModel}, Path=LoadedHandlerCommand}"/>
+            <core:InvokeCommandAction Command="{Binding Source={StaticResource viewModel}, Path=LoadedHandlerCommand}"
+                                      CommandParameter="AllMessages"/>
         </core:EventTriggerBehavior>
     </ineractivity:Interaction.Behaviors>
     <Grid DataContext="{StaticResource viewModel}">
@@ -47,28 +48,32 @@
                     Width="80"
                     Height="40"
                     Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
-                    Command="{Binding LoadMessagesViewModel.LoadAllMessagesFromLocalStorageCommand}"/>
+                    Command="{Binding LoadMessagesViewModel.LoadMessagesFromLocalStorageCommand}"
+                    CommandParameter="AllMessages"/>
             <Button x:Uid="ButtonSentMail"
                     Margin="10,5,0,0"
                     HorizontalAlignment="Left"
                     Width="80"
                     Height="40"
                     Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
-                    Command="{Binding LoadMessagesViewModel.LoadSentMessagesFromLocalStorageCommand}"/>
+                    Command="{Binding LoadMessagesViewModel.LoadMessagesFromLocalStorageCommand}"
+                    CommandParameter="SentMessages"/>
             <Button x:Uid="ButtonFlagged"
                     Margin="10,5,0,0"
                     HorizontalAlignment="Left"
                     Width="80"
                     Height="40"
                     Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
-                    Command="{Binding LoadMessagesViewModel.LoadFlaggedMessagesFromLocalStorageCommand}"/>
+                    Command="{Binding LoadMessagesViewModel.LoadMessagesFromLocalStorageCommand}"
+                    CommandParameter="FlaggedMessages"/>
             <Button x:Uid="ButtonDrafts"
                     Margin="10,5,0,0"
                     HorizontalAlignment="Left"
                     Width="80"
                     Height="40"
                     Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
-                    Command="{Binding LoadMessagesViewModel.LoadDraftMessagesFromLocalStorageCommand}"/>
+                    Command="{Binding LoadMessagesViewModel.LoadMessagesFromLocalStorageCommand}"
+                    CommandParameter="DraftMessages"/>
             <TextBlock x:Uid="TextBlockLogin"
                        Margin="0,10,0,0"
                        Visibility="{Binding LoginViewModel.LoginControlsVisibility}"/>
@@ -140,7 +145,7 @@
                 </StackPanel>
                 <Button Grid.Column="1"
                         x:Uid="ButtonSync"
-                        Command="{Binding LoadMessagesViewModel.LoadAllMessagesFromServerCommand}"
+                        Command="{Binding LoadMessagesViewModel.LoadMessagesFromServerCommand}"
                         Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"/>
                 <StackPanel Grid.Column="2"
                             Margin="10,0,0,0">
