--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -13,6 +13,13 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
         <vm:PostClientViewModel x:Key="viewModel"/>
+        <Storyboard x:Name="StoryboardLoading">
+            <ColorAnimationUsingKeyFrames Storyboard.TargetName="listViewMessages" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)">
+                <EasingColorKeyFrame KeyTime="00:00:00" Value="#FF8400FF"/>
+                <EasingColorKeyFrame KeyTime="00:00:01" Value="#FFFF00DE"/>
+                <EasingColorKeyFrame KeyTime="00:00:02" Value="#FF8400FF"/>
+            </ColorAnimationUsingKeyFrames>
+        </Storyboard>
     </Page.Resources>
     <ineractivity:Interaction.Behaviors>
         <core:EventTriggerBehavior EventName="Loaded">
@@ -146,6 +153,7 @@
                 <Button Grid.Column="1"
                         x:Uid="ButtonSync"
                         Command="{Binding LoadMessagesViewModel.LoadMessagesFromServerCommand}"
+                        CommandParameter="{Binding ElementName=StoryboardLoading}"
                         Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"/>
                 <StackPanel Grid.Column="2"
                             Margin="10,0,0,0">
@@ -168,7 +176,7 @@
                     </ComboBox>
                 </StackPanel>
             </Grid>
-            <ListView Margin="10"
+            <ListView x:Name="listViewMessages" Margin="10"
                       Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
                       ItemsSource="{Binding LoadMessagesViewModel.Messages, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       Grid.Row="1"
