--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -258,10 +258,19 @@
                                    Margin="10,0,0,0"
                                    Grid.Column="0"
                                    Grid.Row="1"/>
-                        <TextBox Margin="5,0,5,0"
-                                 Grid.Column="1"
-                                 Grid.Row="1"
-                                 Text="{Binding SendMessageViewModel.MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        <Grid Grid.Row="1"
+                              Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox Margin="5,0,5,0"
+                                     Grid.Column="0"
+                                     Text="{Binding SendMessageViewModel.MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <Button Grid.Column="1"
+                                    x:Uid="ButtonContact"
+                                    Command="{Binding SendMessageViewModel.ChooseContactCommand}"/>
+                        </Grid>
                     </Grid>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
@@ -308,14 +317,17 @@
                             <Button Grid.Column="0"
                                     Content="B"
                                     FontWeight="Bold"
-                                    Command="{Binding SendMessageViewModel.BoldSelectedTextCommand}"/>
+                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                    CommandParameter="b"/>
                             <Button Grid.Column="1"
                                     Content="I"
                                     FontStyle="Italic"
-                                    Command="{Binding SendMessageViewModel.ItalicSelectedTextCommand}"/>
+                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                    CommandParameter="i"/>
                             <Button Grid.Column="2"
                                     Content="U"
-                                    Command="{Binding SendMessageViewModel.UnderlineSelectedTextCommand}"/>
+                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                    CommandParameter="u"/>
                             <Button Grid.Column="3"
                                     Content="+"
                                     Command="{Binding SendMessageViewModel.AddLineCommand}"/>
