--- a/Views/Controls/MessageBodyControl.xaml
+++ b/Views/Controls/MessageBodyControl.xaml
@@ -9,6 +9,16 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <Grid>
-        <WebView x:Name="webView"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <WebView Grid.Row="0"
+                 x:Name="webView"/>
+        <ComboBox Grid.Row="1" 
+                  Header="Attachemts"
+                  x:Name="attachmentsComboBox"
+                  HorizontalAlignment="Stretch"
+                  SelectionChanged="AttachmentsComboBox_SelectionChanged"/>
     </Grid>
 </UserControl>
