--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -305,13 +305,21 @@
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="4*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Button x:Uid="ButtonInsert"
                                 Grid.Column="0"
-                                Command="{Binding SendMessageViewModel.InsertFileCommand}"/>
-                        <Grid Grid.Column="1">
+                                Command="{Binding SendMessageViewModel.InsertFileCommand}"
+                                CommandParameter="{Binding ElementName=filesComboBox}"/>
+                        <ComboBox x:Name="filesComboBox"
+                                  Grid.Column="1"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Center">
+                            
+                        </ComboBox>
+                        <Grid Grid.Column="2">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -356,17 +364,20 @@
                             Grid.Column="0"
                             Margin="5"
                             HorizontalAlignment="Left"
-                            Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"/>
+                            Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"
+                            CommandParameter="{Binding ElementName=filesComboBox}"/>
                     <Button x:Uid="ButtonDraft"
                             Grid.Column="1"
                             Margin="5"
                             HorizontalAlignment="Center"
-                            Command="{Binding SendMessageViewModel.DraftMessageCommand}"/>
+                            Command="{Binding SendMessageViewModel.DraftMessageCommand}"
+                            CommandParameter="{Binding ElementName=filesComboBox}"/>
                     <Button x:Uid="ButtonSend"
                             Grid.Column="2"
                             Margin="5"
                             HorizontalAlignment="Right"
-                            Command="{Binding SendMessageViewModel.SendMessageCommand}"/>
+                            Command="{Binding SendMessageViewModel.SendMessageCommand}"
+                            CommandParameter="{Binding ElementName=filesComboBox}"/>
                 </Grid>
             </Grid>
         </Grid>
