fixed outlook service

--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -26,7 +26,7 @@
             <core:InvokeCommandAction Command="{Binding Source={StaticResource viewModel}, Path=LoadedHandlerCommand}"
                                       CommandParameter="AllMessages"/>
         </core:EventTriggerBehavior>
-        <core:EventTriggerBehavior EventName="Closed">
+        <core:EventTriggerBehavior EventName="Unloaded">
             <core:InvokeCommandAction Command="{Binding Source={StaticResource viewModel}, Path=ClosedHandlerCommand}"/>
         </core:EventTriggerBehavior>
     </ineractivity:Interaction.Behaviors>
